text align fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -37,9 +37,13 @@ body {
   flex-direction: column;
 }
 
+.centerContainer h1 {
+  text-align: center;
+}
+
+
 .centerContainer > p {
-  width: 50%;
-  max-width: 1000px;
+  max-width: 800px;
   text-align: center;
 }
 
